# Multi-Agent-system

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  TESTING.md  TRACE_AND_EVIDENCE.md
src/office_agent/: __init__.py  auth.py  checkpointing.py  concurrency.py  demo_harness.py  graph.py  langgraph_checkpointing.py  mock_tools.py  nodes.py  portfolio_demo.py  scenario_catalog.py  scenarios.py  service_runtime.py  state.py  ui_templates.py
tests/: test_clarification_resume.py  test_concurrent_high_risk_stability.py  test_concurrent_s15_resume_stability.py  test_concurrent_stability.py  test_langgraph_native_checkpointer_integration.py  test_langgraph_skeleton.py  test_local_service_runtime.py  test_permission_paths.py  test_portfolio_demo_harness.py  test_public_release_content.py  test_s14_file_processing_path.py  test_s15_checkpoint_concurrency.py  test_s15_failure_paths.py  test_s15_persistent_checkpoint_thread_resume.py  test_s15_project_inquiry_resume.py  test_salary_permission_policy.py  test_test_employee_seed.py
