[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-office-agent"
version = "0.1.0"
description = "Enterprise office Multi-Agent workflow system built with LangGraph"
requires-python = ">=3.12"
dependencies = [
  "langgraph>=1.2,<2",
]

[tool.setuptools.packages.find]
where = ["src"]
